--- a/11_proovikontrolltoo2/animalsystem/src/main/resources/application.properties
+++ b/11_proovikontrolltoo2/animalsystem/src/main/resources/application.properties
@@ -2,5 +2,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/fullstack
 spring.datasource.username=root
 spring.datasource.password=
-
+spring.jpa.database=mysql
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
